feat: family register check if the cpf is valid
